--- a/san-pham/12000-btu-air-conditioner-with-remote-control/index.html
+++ b/san-pham/12000-btu-air-conditioner-with-remote-control/index.html
@@ -575,8 +575,8 @@ jQuery.extend( wp.codeEditor.defaultSettings, {"codemirror":{"indentUnit":4,"ind
 		        <div class="os-quantity-wrapper">
             <button type="button" class="woo-quantity-btn woo-quantity-minus"><i class="bx bx-minus"></i></button>
        	<div class="quantity">
-				<label class="screen-reader-text" for="quantity_6364b2c19d225">12,000 BTU Air Conditioner with Remote Control số lượng</label>
-		<input type="number" id="quantity_6364b2c19d225" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6364b7e408005">12,000 BTU Air Conditioner with Remote Control số lượng</label>
+		<input type="number" id="quantity_6364b7e408005" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	        
             <button type="button" class="woo-quantity-btn woo-quantity-plus"><i class="bx bx-plus"></i></button>
@@ -665,7 +665,7 @@ jQuery.extend( wp.codeEditor.defaultSettings, {"codemirror":{"indentUnit":4,"ind
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="5923c36b0f"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="166"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="100"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
