--- a/san-pham/43″-class-tu7000-series-crystal-uhd-4k-smart-tv/index.html
+++ b/san-pham/43″-class-tu7000-series-crystal-uhd-4k-smart-tv/index.html
@@ -579,8 +579,8 @@ jQuery.extend( wp.codeEditor.defaultSettings, {"codemirror":{"indentUnit":4,"ind
 		        <div class="os-quantity-wrapper">
             <button type="button" class="woo-quantity-btn woo-quantity-minus"><i class="bx bx-minus"></i></button>
        	<div class="quantity">
-				<label class="screen-reader-text" for="quantity_6364b2b9a52f0">(upsel-crossel)43″ Class TU7000 Series Crystal UHD 4K Smart TV số lượng</label>
-		<input type="number" id="quantity_6364b2b9a52f0" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6364b7e04460f">(upsel-crossel)43″ Class TU7000 Series Crystal UHD 4K Smart TV số lượng</label>
+		<input type="number" id="quantity_6364b7e04460f" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	        
             <button type="button" class="woo-quantity-btn woo-quantity-plus"><i class="bx bx-plus"></i></button>
@@ -692,7 +692,7 @@ jQuery.extend( wp.codeEditor.defaultSettings, {"codemirror":{"indentUnit":4,"ind
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="e8ad2b48fe"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="164"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="146"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
